--- a/requirements.txt
+++ b/requirements.txt
@@ -70,6 +70,7 @@ pyzmq==19.0.2
 requests==2.24.0
 retrying==1.3.3
 s3transfer==0.3.3
+scipy==1.5.3
 Send2Trash==1.5.0
 six==1.15.0
 streamlit==0.67.1
